--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,9 +1,10 @@
 <html>
 <body>
  <form action="{% url 'accounts:signup_request' %}" method="POST">
-	{% csrf_token %}   
-	User Name: <input name="user" type="text" />
-	Password: <input name="user" type="password" />
+	{% csrf_token %}
+	User Name: <input name="user" type="text" /></br>
+	E-Mail: <input name="mail" type="text" /></br>
+	Password: <input name="pass" type="password" />
    <input type="submit"value="Submit" />
  </form>
 </body>
