--- a/nutritrack/templates/nutritrack/index.html
+++ b/nutritrack/templates/nutritrack/index.html
@@ -3,6 +3,6 @@
 		<title>Hello World</title>
 	</head>
 	<body>
-		<p>Hello world application.</p>
+		<p>Hello world {{ username }} .</p>
 	</body>
 </html>
