Added some login views and features

--- a/accounts/templates/accounts/signup_success.html
+++ b/accounts/templates/accounts/signup_success.html
@@ -1,9 +1,5 @@
-<html>
-
-	<head>
-		<title>Created an Account</title>
-	</head>
-	<body>
-		<h1>Success!</h1>
-	</body>
-</html>
+<div class="jumbotron">
+  <h1>Hey {{ username }}!</h1>
+  <p>Your account has been created successfully. You can start tracking your actions now!</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Tracker</a></p>
+</div>
