--- a/accounts/templates/accounts/signin.html
+++ b/accounts/templates/accounts/signin.html
@@ -1,12 +1,6 @@
-<html>
-
-	<body>
 		<form action="{% url 'accounts:signin_request' %}" method="POST">
 			{% csrf_token %}
 		        User Name: <input name="user" type="text" /></br>
-		        Password: <input name="pass" type="password" />
+		        Password: <input name="pass" type="password" /></br>
 			<input type="submit"value="Submit" />
 		</form>
-	</body>
-
-</html>
