--- a/nutritrack/templates/nutritrack/master.html
+++ b/nutritrack/templates/nutritrack/master.html
@@ -20,12 +20,94 @@
 			border-radius: 5px;
 			background-color: #ffffff;
 		}
+
+		.navbar{
+			position: absolute;
+			width: 100%;
+			margin-bottom: 0px;
+			padding: 2px 20px 2px 10px;
+		}
+		.sidebar{
+			margin-top:0px;
+			padding-top: 10px;
+			width: 80px;
+			height: 100%;
+			border: none;
+			background-color: #565656;
+			invalid_coolor: #4DB0FC;
+		}
+		.sidebar>*{
+		 position: relative;
+			left: -12px;
+		}
+		.sidebar-button{
+			display:block;
+			background-color:#ffffff;
+			width: 40px;
+			height: 40px;
+			border-radius: 20px;
+			margin-bottom: 10px;
+		}
+		.sidebar-button>img{
+			width:28px;
+			height:28px;
+			position:relative;
+			left:6px;
+			top: 6px;
+		}
+		.panel-body{
+			padding-top: 70px;
+			height: 100%;
+		}
+		.panel-footer{
+			background-color: transparent;
+			border: none;
+			position:relative;
+			bottom:120px;
+		}
 		</style>
 	</head>
 	<body>
 		{{ navbar }}
-		  <div class="page_content container-fluid">
-		{{ page_content }}
-		</div>
+
+<div class="container-fluid">
+        <div class="row">
+                <div class="col-md-1 sidebar">
+                                <div class="panel-body">
+					
+					<a href="#" class="sidebar-button">
+					<img src="/static/nutritrack/apple.png" alt="Food Icon"/>
+					</a>
+					<a href="#" class="sidebar-button">
+					<img src="/static/nutritrack/cycle.png" alt="Activity Icon"/>
+					</a>
+					<a href="#" class="sidebar-button">
+					<img src="/static/nutritrack/info.png" alt="Information Icon"/>
+					</a>
+                                </div>
+                                <div class="panel-footer">
+					<a href="#" class="sidebar-button">
+					<img src="/static/nutritrack/gear.png" alt="Gear Icon"/>
+					</a>
+					<a href="#" class="sidebar-button">
+					<img src="/static/nutritrack/logout.png" alt="Logout Icon"/>
+					</a>
+                                </div>
+                </div>
+                <div class="col-md-11">
+                            <div class="row">
+                                <div class="col-md-6">
+					{{ page_content }}
+                                </div>
+                                <div class="col-md-6">
+                                        Hello World
+                                </div>
+                        </div>
+
+                </div>
+        </div>
+</div>
+
+
 	</body>
 </html>
