Added sidebar from mockup

--- a/nutritrack/templates/nutritrack/master.html
+++ b/nutritrack/templates/nutritrack/master.html
@@ -65,6 +65,10 @@
 			position:relative;
 			bottom:120px;
 		}
+		.full-content{
+			position: relative;
+			top: 70px;
+		}
 		</style>
 	</head>
 	<body>
@@ -72,29 +76,10 @@
 
 <div class="container-fluid">
         <div class="row">
-                <div class="col-md-1 sidebar">
-                                <div class="panel-body">
-					
-					<a href="#" class="sidebar-button">
-					<img src="/static/nutritrack/apple.png" alt="Food Icon"/>
-					</a>
-					<a href="#" class="sidebar-button">
-					<img src="/static/nutritrack/cycle.png" alt="Activity Icon"/>
-					</a>
-					<a href="#" class="sidebar-button">
-					<img src="/static/nutritrack/info.png" alt="Information Icon"/>
-					</a>
-                                </div>
-                                <div class="panel-footer">
-					<a href="#" class="sidebar-button">
-					<img src="/static/nutritrack/gear.png" alt="Gear Icon"/>
-					</a>
-					<a href="#" class="sidebar-button">
-					<img src="/static/nutritrack/logout.png" alt="Logout Icon"/>
-					</a>
-                                </div>
-                </div>
-                <div class="col-md-11">
+
+		{{ sidebar }}
+
+                <div class="col-md-11 full-content">
                             <div class="row">
                                 <div class="col-md-6">
 					{{ page_content }}
