--- a/nutritrack/templates/nutritrack/master.html
+++ b/nutritrack/templates/nutritrack/master.html
@@ -7,6 +7,13 @@
 		body{
 			background-color: #efefef;
 		}
+		.full-content{
+			width:100%;
+			height:100%;
+			background-size: 100%;
+			background-image: url("/static/nutritrack/yolk.png");
+		}
+
 
 		h2 {
 		  color:#ffffff;
@@ -67,7 +74,8 @@
 		}
 		.full-content{
 			position: relative;
-			top: 70px;
+			top: 50px;
+			padding: 20px;
 		}
 		</style>
 	</head>
@@ -80,14 +88,11 @@
 		{{ sidebar }}
 
                 <div class="col-md-11 full-content">
-                            <div class="row">
-                                <div class="col-md-6">
+				<div class="red0">
+				<div class="row">
 					{{ page_content }}
-                                </div>
-                                <div class="col-md-6">
-                                        Hello World
-                                </div>
-                        </div>
+</div>
+                            </div>
 
                 </div>
         </div>
