--- a/nutritrack/templates/nutritrack/welcome.html
+++ b/nutritrack/templates/nutritrack/welcome.html
@@ -1,4 +1,5 @@
-<div class="jumbotron">
+
+<div class="jumbotron yolk-background">
   <h1>Welcome Stranger!</h1>
   <p>Are you ready to take on a healthier lifesytle? Then you're at the right place! Sign up now!</p>
   <p>
