--- a/accounts/templates/accounts/signin.html
+++ b/accounts/templates/accounts/signin.html
@@ -1,6 +1,36 @@
-		<form action="{% url 'accounts:signin_request' %}" method="POST">
+<html>
+<body>
+<div class="jumbotron container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<form role="form" action="{% url 'accounts:signin_request' %}" method="POST">
 			{% csrf_token %}
-		        User Name: <input name="user" type="text" /></br>
-		        Password: <input name="pass" type="password" /></br>
-			<input type="submit"value="Submit" />
-		</form>
+				<h3>Log in</h3>
+				<div class="form-group">
+					<label>Username</label>
+					<input type="text" class="form-control" name="user" />
+				</div>
+				<div class="form-group">
+					<label for="mail1">Email address</label>
+					<input type="text" class="form-control" name="mail" />
+				</div>
+				<div class="form-group">
+					 
+					<label for="pass1">Password</label>
+					<input type="password" class="form-control" name="pass"/>
+				</div>
+				<button type="submit" class="btn btn-primary btn-lg">
+					Log in
+				</button>
+			</form>
+		</div>
+		<div class="col-md-6">
+			<h3>Not a Member?<h3>
+			<p>Create an account through sign-up page</p>
+			<a class="btn btn-primary btn-lg" href="{% url 'accounts:signup' %}" role="button">Become a Member</a>
+		
+		</div>
+	</div>
+</div>
+</body>
+</html>
