--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,11 +1,36 @@
 <html>
 <body>
- <form action="{% url 'accounts:signup_request' %}" method="POST">
-	{% csrf_token %}
-	User Name: <input name="user" type="text" /></br>
-	E-Mail: <input name="mail" type="text" /></br>
-	Password: <input name="pass" type="password" />
-   <input type="submit"value="Submit" />
- </form>
+<div class="jumbotron container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<form role="form" action="{% url 'accounts:signup_request' %}" method="POST">
+			{% csrf_token %}
+				<h3>Become a Member</h3>
+				<div class="form-group">
+					<label>Username</label>
+					<input type="text" class="form-control" name="user" />
+				</div>
+				<div class="form-group">
+					<label for="mail1">Email address</label>
+					<input type="text" class="form-control" name="mail" />
+				</div>
+				<div class="form-group">
+					 
+					<label for="pass1">Password</label>
+					<input type="password" class="form-control" name="pass"/>
+				</div>
+				<button type="submit" class="btn btn-primary btn-lg">
+					Create Account
+				</button>
+			</form>
+		</div>
+		<div class="col-md-6">
+			<h3>Already a Member?<h3>
+			<p>Login through sign-in</p>
+			<a class="btn btn-primary btn-lg" href="{% url 'accounts:signin' %}" role="button">Sign in</a>
+		
+		</div>
+	</div>
+</div>
 </body>
 </html>
