--- a/nutritrack/templates/nutritrack/master.html
+++ b/nutritrack/templates/nutritrack/master.html
@@ -2,13 +2,13 @@
 	<head>
 
 {% load static %}
-<link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %} ">
+<link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.css' %} ">
 {% load static %}
- <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.js' %}"></script>
 {% load static %}
- <script type="text/javascript" src="{% static 'bower_components/tether/dist/js/tether.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'bower_components/tether/dist/js/tether.js' %}"></script>
 {% load static %}
- <script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.js' %}"></script>
 
 {% load static %}
 <link rel="stylesheet" href="{% static 'nutritrack/nutritrack.css' %} ">
