--- a/usda/templates/usda/search.html
+++ b/usda/templates/usda/search.html
@@ -43,7 +43,8 @@
 					</a>
 					<div class="collapse" id="collapseExample{{ item.food.ndbno }}">
 			 			 <div class="card card-block">
-			    				Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+			    				
+							<h5>{{item.food.category}}</h5>
 						 </div>
 					</div>
 
