--- a/accounts/templates/accounts/signup_success.html
+++ b/accounts/templates/accounts/signup_success.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
   <h1>Hey {{ username }}!</h1>
   <p>Your account has been created successfully. You can start tracking your actions now!</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Tracker</a></p>
+  <p><a class="btn btn-primary btn-lg" href="{% url 'usda:foodsearch' %}" role="button">Tracker</a></p>
 </div>
