--- a/nutritrack/templates/nutritrack/master.html
+++ b/nutritrack/templates/nutritrack/master.html
@@ -10,6 +10,9 @@
 {% load static %}
 <script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.js' %}"></script>
 
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 {% load static %}
 <link rel="stylesheet" href="{% static 'nutritrack/nutritrack.css' %} ">
 
