--- a/nutritrack/templates/nutritrack/sidebar.html
+++ b/nutritrack/templates/nutritrack/sidebar.html
@@ -5,7 +5,7 @@
 					<a href="{% url 'usda:foodsearch' %}" class="sidebar-button">
                                         <img src="/static/nutritrack/apple.png" alt="Food Icon"/>
                                         </a>
-                                        <a href="#" class="sidebar-button">
+                                        <a href="{% url 'usda:activity' %}" class="sidebar-button">
                                         <img src="/static/nutritrack/cycle.png" alt="Activity Icon"/>
                                         </a>
                                         <a href="#" class="sidebar-button">
