--- a/nutritrack/templates/nutritrack/master.html
+++ b/nutritrack/templates/nutritrack/master.html
@@ -24,7 +24,7 @@
 		.full-content{
 			height:100%;
 			background-size: 100%;
-			background-image: url("/static/nutritrack/yolk.png");
+			background-image: url("https://dl.dropboxusercontent.com/u/53503453/nutritrack/yolk.png");
 			position: relative;
 			top: 50px;
 			padding: 20px;
