--- a/nutritrack/templates/nutritrack/sidebar.html
+++ b/nutritrack/templates/nutritrack/sidebar.html
@@ -3,21 +3,21 @@
                                 <div class="panel-body minial_panel">
 
 					<a href="{% url 'usda:foodsearch' %}" class="sidebar-button">
-                                        <img src="/static/nutritrack/apple.png" alt="Food Icon"/>
+                                        <img src="https://dl.dropboxusercontent.com/u/53503453/nutritrack/apple.png" alt="Food Icon"/>
                                         </a>
                                         <a href="{% url 'usda:activity' %}" class="sidebar-button">
-                                        <img src="/static/nutritrack/cycle.png" alt="Activity Icon"/>
+                                        <img src="https://dl.dropboxusercontent.com/u/53503453/nutritrack/cycle.png" alt="Activity Icon"/>
                                         </a>
                                         <a href="#" class="sidebar-button">
-                                        <img src="/static/nutritrack/info.png" alt="Information Icon"/>
+                                        <img src="https://dl.dropboxusercontent.com/u/53503453/nutritrack/info.png" alt="Information Icon"/>
                                         </a>
                                 </div>
                                 <div class="panel-footer minial_panel">
                                         <a href="#" class="sidebar-button">
-                                        <img src="/static/nutritrack/gear.png" alt="Gear Icon"/>
+                                        <img src="https://dl.dropboxusercontent.com/u/53503453/nutritrack/gear.png" alt="Gear Icon"/>
                                         </a>
                                         <a href="{% url 'accounts:logout' %}" class="sidebar-button">
-                                        <img src="/static/nutritrack/logout.png" alt="Logout Icon"/>
+                                        <img src="https://dl.dropboxusercontent.com/u/53503453/nutritrack/logout.png" alt="Logout Icon"/>
                                         </a>
                                 </div>
                 </div>
