--- a/nutritrack/templates/nutritrack/master.html
+++ b/nutritrack/templates/nutritrack/master.html
@@ -1,20 +1,16 @@
 <html>
 	<head>
 
-{% load static %}
-<link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.css' %} ">
-{% load static %}
-<script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.js' %}"></script>
-{% load static %}
-<script type="text/javascript" src="{% static 'bower_components/tether/dist/js/tether.js' %}"></script>
-{% load static %}
-<script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.js' %}"></script>
+<link rel="stylesheet" href="https://dl.dropboxusercontent.com/u/53503453/bower_components/bootstrap/dist/css/bootstrap.css">
+<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/53503453/bower_components/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/53503453/bower_components/tether/dist/js/tether.js"></script>
+<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/53503453/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 {% load static %}
-<link rel="stylesheet" href="{% static 'nutritrack/nutritrack.css' %} ">
+<link rel="stylesheet" href="https://dl.dropboxusercontent.com/u/53503453/nutritrack/nutritrack.css">
 
 		<title>Hello World</title>
 		<style>
