--- a/usda/templates/usda/activity.html
+++ b/usda/templates/usda/activity.html
@@ -37,17 +37,7 @@
 			<ul class="search_results_ul">
 				{% for item in objects %}
 				<div>
-					<a data-toggle="collapse" data-target="#collapseExample{{ item.id }}" aria-expanded="false" aria-controls="collapseExample{{ item.id }}">
-		                        	<span class="glyphicon glyphicon-plus"></span>{{ item.name }}
-					</a>
-					<div class="collapse" id="collapseExample{{ item.id }}">
-			 			 <div class="card card-block">
-			    				
-							<a href="{% url 'usda:activity_details' %}?ndbno={{ item.id }}">Click for details</a>
-						 </div>
-					</div>
-
-
+		                        	<a href="{% url 'usda:activity_details' %}?ndbno={{ item.id }}"><span class="glyphicon glyphicon-plus">{{ item.name }}</span></a>
 				</div>
 				{% endfor %}
 			</ul>
