--- a/nutritrack/templates/nutritrack/index.html
+++ b/nutritrack/templates/nutritrack/index.html
@@ -1,1 +1,9 @@
-		<p>Hello world {{ username }} .</p>
+
+<div class="jumbotron yolk-background">
+  <h1>Welcome {{ username }}!</h1>
+  <p>Are you ready to take on a healthier lifesytle? Then you're at the right place! Sign up now!</p>
+  <p>
+<a class="btn btn-primary btn-lg" href="{% url 'accounts:signup' %}" role="button">Become a Member</a>
+<a class="btn btn-primary btn-lg" href="{% url 'accounts:signin' %}" role="button">Log in</a>
+</p>
+</div>
