--- a/nutritrack/templates/nutritrack/sidebar.html
+++ b/nutritrack/templates/nutritrack/sidebar.html
@@ -13,7 +13,7 @@
                                         </a>
                                 </div>
                                 <div class="panel-footer minial_panel">
-                                        <a href="#" class="sidebar-button">
+                                        <a href="{% url 'accounts:settings' %}" class="sidebar-button">
                                         <img src="https://dl.dropboxusercontent.com/u/53503453/nutritrack/gear.png" alt="Gear Icon"/>
                                         </a>
                                         <a href="{% url 'accounts:logout' %}" class="sidebar-button">
