--- a/usda/templates/usda/details.html
+++ b/usda/templates/usda/details.html
@@ -11,9 +11,8 @@
 	   
 
 	   {% if message is not None %}
-	   	<ul class="search_results_ul">{{ message }}</p>
+	   	<h3 class="search_results_ul"><div>{{ message }}</div></h3>
 	   {% endif %}
-
 		<div class="col-md-11">
 
 	    <h4>{{ food.name }}</h4>
