--- a/nutritrack/templates/nutritrack/master.html
+++ b/nutritrack/templates/nutritrack/master.html
@@ -8,7 +8,7 @@
 {% load static %}
 <link rel="stylesheet" href="https://dl.dropboxusercontent.com/u/53503453/nutritrack/nutritrack.css">
 
-		<title>Hello World</title>
+		<title>NutriTrack</title>
 		<style>
 		body{
 			background-color: #efefef;
