Added buttons for next/previous day

--- a/nutritrack/templates/nutritrack/sidebar.html
+++ b/nutritrack/templates/nutritrack/sidebar.html
@@ -8,7 +8,7 @@
                                         <a href="{% url 'usda:activity' %}" class="sidebar-button">
                                         <img src="https://dl.dropboxusercontent.com/u/53503453/nutritrack/cycle.png" alt="Activity Icon"/>
                                         </a>
-                                        <a href="{% url 'usda:info' %}" class="sidebar-button">
+                                        <a href="{% url 'usda:info' %}?day=0" class="sidebar-button">
                                         <img src="https://dl.dropboxusercontent.com/u/53503453/nutritrack/info.png" alt="Information Icon"/>
                                         </a>
                                 </div>
